# Rust_Elementary_Cellular_Automata

./: Cargo.toml  README.md  output-AsciiBlock  output-UnicodeAnimals  output-UnicodeBlocks  output-format-1  output-format-2
.github/workflows/: rust-clippy.yml
src/: array.rs  imgui.rs  imgui_wrapper.rs  main.rs  state.rs
