[package]
name = "rust_elementary_cellular_automata"
version = "0.1.2"
authors = ["Jacob <jacobedwardhaig@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.0"
ggez = "0.5.1"

gfx_core = "0.9"
gfx_device_gl = "0.16"

imgui = "0.1.0"
imgui-gfx-renderer = "0.1.0"