[package]
name = "rust_elementary_cellular_automata"
version = "0.1.3"
authors = ["Jacob <jacobedwardhaig@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
ggez = "0.7.0"

gfx_core = "0.9"
gfx_device_gl = "0.16"

imgui = "0.8.2"
imgui-gfx-renderer = "0.8.2"